--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "symfony/browser-kit": "^7.2",
+        "symfony/dom-crawler": "^7.2",
+        "symfony/http-client": "^7.2",
         "thiagoprz/eloquent-composite-key": "^1.0"
     },
     "require-dev": {
